# cellworld_vr

./: CMakeLists.txt  wsl-port-forwarding.ps1
catchtests/: structs.cpp
include/: cell_world_vr.h
include/cell_world_vr/: location3.h  message.h  rotation3.h  state.h  vr_episode.h  vr_experiment.h  vr_service.h  world_conversion.h
include/cell_world_vr/net/: client.h  pipe_ret_t.h  server_observer.h  tcp_server.h
src/: client.cpp  convert_experiment.cpp  location3.cpp  rotation3.cpp  server.cpp  state.cpp  vr_episode.cpp  vr_experiment.cpp  vr_service.cpp  world_conversion.cpp
src/console/: get_participants.cpp  hide_visibility.cpp  new_experiment.cpp  set_incognito_mode.cpp  set_min_ghost_distance.cpp  set_participant_name.cpp  set_speed.cpp  set_turning_speed.cpp  set_view_angle.cpp  set_world.cpp  show_visibility.cpp  start_training.cpp  stop_training.cpp
src/net/: client.cpp  tcp_server.cpp
